--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,15 @@
         --primary: 0 0% 9%; /* Основная кнопка - черная */
         --primary-foreground: 0 0% 98%; /* Текст на ней - почти белый */
 
-        --secondary: 0 0% 96.1%; /* Второстепенный фон - светло-серый */
-        --secondary-foreground: 0 0% 9%; /* Текст на нем - черный */
+        /* ПЕРЕМЕННЫЕ ДЛЯ КНОПОК ВХОДА */
+        --login: 0 0% 100%;
+        --login-foreground: 0 0% 9%;
+
+        /* --secondary: 0 0% 9%;
+        --secondary-foreground: 0 0% 98%;  */
+
+        --secondary: 210 40% 96.1%;
+        --secondary-foreground: 222.2 47.4% 11.2%;
 
         --muted: 0 0% 96.1%; /* Приглушенный фон - светло-серый */
         --muted-foreground: 0 0% 45.1%; /* Приглушенный текст - темно-серый */
@@ -50,8 +57,15 @@
         --primary: 0 0% 98%; /* Основная кнопка - белая */
         --primary-foreground: 0 0% 9%; /* Текст на ней - черный */
 
-        --secondary: 0 0% 14.9%; /* Второстепенный фон - очень темный серый */
-        --secondary-foreground: 0 0% 98%; /* Текст на нем - белый */
+        /* ПЕРЕМЕННЫЕ ДЛЯ КНОПОК ВХОДА */
+        --login: 0 0% 9%;
+        --login-foreground: 0 0% 98%;
+
+        /* --secondary: 0 0% 98%;
+        --secondary-foreground: 0 0% 9%; */
+
+        --secondary: 217.2 32.6% 17.5%;
+        --secondary-foreground: 210 40% 98%;
 
         --muted: 0 0% 14.9%;
         --muted-foreground: 0 0% 63.9%; /* Приглушенный текст - светло-серый */
